--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cloudinary": "^2.5.1",
+    "papaparse": "^5.5.2",
     "pg": "^8.13.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.8.0",
@@ -89,6 +90,7 @@
     "@types/jest": "^29.5.12",
     "@types/multer": "^1.4.12",
     "@types/node": "18.16.9",
+    "@types/papaparse": "^5.3.15",
     "@typescript-eslint/eslint-plugin": "^8.24.1",
     "@typescript-eslint/parser": "^8.24.1",
     "@typescript-eslint/utils": "^8.24.1",
